Ported to JDK 16 (#48)